--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,12 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <title>React App</title>
+    <title>BookRead</title>
   </head>
 
   <body>
     <div id="root"></div>
-
   </body>
 
 </html>
